bugfix: [0001] Fix Slanted Box Height on Tablets

--- a/Mockup/style.css
+++ b/Mockup/style.css
@@ -589,6 +589,16 @@ section > .row {
         margin-bottom: 10px;
     }
 
+    .slanted_box:before,.slanted_box:after {
+        top: 35%;
+        height: 700px;
+    }
+
+    .slanted_box #reason {
+        padding-bottom: 0px;
+        margin-bottom: 100px;
+    }
+
     /* Reason Section */
     #reason {
         margin-bottom: 25%;
@@ -757,7 +767,7 @@ section > .row {
     }
 
     .slanted_box:before,.slanted_box:after {
-        top: 25%;
+        top: 20%;
         height: 1000px;
     }
     /* Reason Section  */
